[gd_scene load_steps=3 format=3 uid="uid://nbqn4t4regdg"]

[ext_resource type="PackedScene" uid="uid://d13roc8t5yibe" path="res://src/gameplay/enemies/enemy_template.tscn" id="1_mgltd"]
[ext_resource type="Script" path="res://src/gameplay/state_machine/enemy/melee_attack_state.gd" id="2_4ree5"]

[node name="MeleeEnemy" groups=["enemy"] instance=ExtResource("1_mgltd")]

[node name="AnimatedSprite2D" parent="." index="1"]
modulate = Color(0.620575, 0.533061, 1.92523e-07, 1)

[node name="NavigationAgent2D" parent="." index="4"]
target_desired_distance = 45.0

[node name="FollowingState" parent="StateMachine" index="2" node_paths=PackedStringArray("desired_next_state")]
desired_next_state = NodePath("../MeleeAttackState")

[node name="MeleeAttackState" type="Node" parent="StateMachine" index="3" node_paths=PackedStringArray("connections")]
script = ExtResource("2_4ree5")
connections = [NodePath("../FollowingState")]

[node name="PlayerDistanceTimer" type="Timer" parent="StateMachine/MeleeAttackState" index="0"]
wait_time = 0.2

[node name="AttackTimer" type="Timer" parent="StateMachine/MeleeAttackState" index="1"]

[node name="CanAttackTimer" type="Timer" parent="StateMachine/MeleeAttackState" index="2"]
one_shot = true

[connection signal="timeout" from="StateMachine/MeleeAttackState/PlayerDistanceTimer" to="StateMachine/MeleeAttackState" method="_on_player_distance_timer_timeout"]
[connection signal="timeout" from="StateMachine/MeleeAttackState/AttackTimer" to="StateMachine/MeleeAttackState" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="StateMachine/MeleeAttackState/CanAttackTimer" to="StateMachine/MeleeAttackState" method="_on_can_attack_timer_timeout"]
